tests/regression/error/hw4_error24.sml
val prog =
  PROGRAM
    {classes=[],decls=[],funcs=[],
     stmts=[ST_WHILE {body=ST_BLOCK {stmts=[]},guard=EXP_NUM 3}]} : program
;
